# my_wagtail

./: fly.toml  main.py  pyproject.toml
myproject/news/: models.py
myproject/settings/: base.py  dev.py
myproject/utils/: blocks.py
